Fix alignment of testimony card

--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -55,7 +55,7 @@
 
   .testimony {
     //display: none;
-    position: absolute;
+    position: relative;
     animation: slideLeft 0.5s forwards;  
   }
 
